# crescent-web-app

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: urls.py  views.py
core/templates/core/: about_us.html  contact_us.html  home.html  services.html  success.html  t_and_c.html
templates/core/: base.html
