[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "sidvyass",email = "sidd.vyass@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

